* For BETA releases only - Internet permission is required fro crash tracking.
* YABTU.
* Localization update: KN, KU, PT-BR.

More here: https://github.com/AnySoftKeyboard/AnySoftKeyboard/milestones/1.8-r4