@@ -1,5 +1,6 @@
 * For BETA releases only - Internet permission is required fro crash tracking.
+* Now you can 🔍 for emojis! Just start your search with a colon, like this - ':magnifying
 * YABTU.
 * Localization update: KN, KU, PT-BR.
 
-More here: https://github.com/AnySoftKeyboard/AnySoftKeyboard/milestones/1.8-r4
+More here: https://github.com/AnySoftKeyboard/AnySoftKeyboard/milestones/1.8-r5
